# LearningEqualityCurriculumRecommendations

./: .gitignore  Dockerfile  Makefile  docker-compose.yaml  pyproject.toml  run.py  setup.sh  submission.csv
.devcontainer/: devcontainer.json  docker-compose.yml
docs/: idea.md
scripts/: check_token_length.py  fix_content_ids.py  inference.py  inference_001_sbert_uns.py  inference_002_adding_pp.py  make_folds.py  make_sup_train.py  sup_sbert_train.py  tokenize_ds.py  train.py  uns_train.py  unsupervised_train.py  xlm_roberta_train.py
src/: cfg.py  collator.py  constants.py  metric.py  metrics.py  model.py  train.py  utils.py
