[tool.poetry]
name = "base"
version = "0.1.0"
description = ""
authors = ["daikichiba9511 <daikichiba.tech.ml@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8,<3.9"
numpy = "<1.21"
pandas = "^1.5.3"
matplotlib = "^3.7.0"
seaborn = "^0.12.2"
polars = "^0.16.9"
networkx = "^3.0"
scikit-learn = "^1.2.1"
pyarrow = "^11.0.0"
fastparquet = "^2023.2.0"

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
isort = "^5.10.1"
mypy = "^0.942"
pyproject-flake8 = "^5.0.4.post1"
autoflake8 = "^0.4.0"
kaggle = "^1.5.12"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py39"]

[tool.isort]
line_length = 120
profile = "black"

[tool.flake8]
max-line-length = 120
ignore = "E203,E266,E501,W503,B905,B907"
exclude = [".git", ".venv", "__pycache__", ".mypy_cache"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
disallow_untyped_defs = true
allow_redefinition = true
warn_redundant_casts = true
show_error_context = true
incremental = false
no_implicit_optional = true
warn_unreachable = true
show_error_codes = true
pretty = true
disallow_incomplete_defs = true
warn_no_return = true

[tool.jupytext]
formats = "notebooks///ipynb,scripts///py:percent"
