[tool.poetry]
name = "base"
version = "0.1.0"
description = ""
authors = ["daikichiba9511 <daikichiba.tech.ml@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8,<3.9"
numpy = "<1.21"
pandas = "^1.5.3"
matplotlib = "^3.7.0"
seaborn = "^0.12.2"
polars = "^0.16.9"
networkx = "^3.0"
scikit-learn = "^1.2.1"
transformers = "^4.26.1"
torch = { url = "https://download.pytorch.org/whl/cu116/torch-1.13.1%2Bcu116-cp38-cp38-linux_x86_64.whl" }
# cudf-cu11 = { url = "https://pypi.nvidia.com/cudf-cu11/cudf_cu11-23.2.0-cp38-cp38-manylinux_2_17_x86_64.manylinux2014_x86_64.whl" }
# cuml-cu11 = { url = "https://pypi.nvidia.com/cuml-cu11/cuml_cu11-23.2.0-cp38-cp38-manylinux_2_17_x86_64.manylinux2014_x86_64.whl" }
# cupy-cuda11x = "*"
pyarrow = "^11.0.0"
fastparquet = "^2023.2.0"
accelerate = "^0.16.0"
datasets = "^2.10.1"
evaluate = "^0.4.0"
fire = "^0.5.0"
wandb = "^0.13.10"
python-dotenv = "^1.0.0"
sentence-transformers = "^2.2.2"

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
isort = "^5.10.1"
mypy = "^0.942"
pyproject-flake8 = "^5.0.4.post1"
autoflake8 = "^0.4.0"
kaggle = "^1.5.12"
jupyterlab = "^3.6.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py39"]

[tool.isort]
line_length = 120
profile = "black"

[tool.flake8]
max-line-length = 120
ignore = "E203,E266,E501,W503,B905,B907"
exclude = [".git", ".venv", "__pycache__", ".mypy_cache"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
disallow_untyped_defs = true
allow_redefinition = true
warn_redundant_casts = true
show_error_context = true
incremental = false
no_implicit_optional = true
warn_unreachable = true
show_error_codes = true
pretty = true
disallow_incomplete_defs = true
warn_no_return = true

[tool.jupytext]
formats = "notebooks///ipynb,scripts///py:percent"
